Add Model wrapper and Jackson lib for JSON deserialization

--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 plugins {
-    id 'java'
+    id "java"
 }
 
-group 'org.lacerda'
-version '1.0-SNAPSHOT'
+group "org.lacerda"
+version "1.0-SNAPSHOT"
 
 sourceCompatibility = 1.11
 
@@ -11,6 +11,7 @@ project.ext.lwjglVersion = "3.2.3"
 project.ext.jomlVersion = "1.10.1"
 project.ext.guacamoleVersion = "0.3.1"
 project.ext.lwjglNatives = "natives-macos"
+project.ext.jacksonVersion = "2.12.0"
 
 repositories {
     mavenCentral()
@@ -32,9 +33,11 @@ dependencies {
     runtimeOnly "org.lwjgl:lwjgl-openal::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
-    implementation "org.joml:joml:${jomlVersion}"
+    implementation "org.joml:joml:$jomlVersion"
 
     implementation "com.github.crykn.guacamole:gdx-desktop:$guacamoleVersion"
+
+    implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
 
     testCompile group: "org.junit.jupiter", name: "junit-jupiter-api", version: "5.7.0"
 }
