Add color BLANK and do not render it

--- a/src/main/resources/model/rocketLauncher.json
+++ b/src/main/resources/model/rocketLauncher.json
@@ -1,10 +1,10 @@
 {
   "matrixWithColors": [
-    "white", "white", "white", "black", "white", "white", "white",
-    "white", "white", "black", "black", "black", "white", "white",
-    "white", "black", "black", "black", "black", "black", "white",
-    "white", "white", "white", "black", "white", "white", "white",
-    "white", "white", "white", "black", "white", "white", "white"
+    "BLANK", "BLANK", "BLANK", "black", "BLANK", "BLANK", "BLANK",
+    "BLANK", "BLANK", "black", "black", "black", "BLANK", "BLANK",
+    "BLANK", "black", "black", "black", "black", "black", "BLANK",
+    "BLANK", "BLANK", "BLANK", "black", "BLANK", "BLANK", "BLANK",
+    "BLANK", "BLANK", "BLANK", "black", "BLANK", "BLANK", "BLANK"
   ],
   "columns": 7,
   "lines": 5
