--- a/src/main/resources/model/projectile.json
+++ b/src/main/resources/model/projectile.json
@@ -3,9 +3,8 @@
     "BLANK", "BLANK", "BLANK", "BLANK", "BLANK",
     "BLANK", "silver", "gray", "silver", "BLANK",
     "BLANK", "gray", "black", "gray", "BLANK",
-    "BLANK", "silver", "gray", "silver", "BLANK",
-    "BLANK", "BLANK", "BLANK", "BLANK", "BLANK"
+    "BLANK", "silver", "gray", "silver", "BLANK"
   ],
   "columns": 5,
-  "lines": 5
+  "lines": 4
 }
